responsive graficas y quitar encabezado libreria

--- a/src/app/pages/projects/identification/identification.component.html
+++ b/src/app/pages/projects/identification/identification.component.html
@@ -1235,11 +1235,11 @@
                     </div>
                     <div class="col-sm">
                         <div class="d-flex justify-content-sm-end gap-2">
-                            
+                        
                         <div class="btn-group" ngbDropdown>
                             
                             <button type="button" class="btn btn-primary" style="
-                            width: 250px;
+                            width: 200px;
                             text-align: left;
                         ">General (Empresa)</button>    
                             <button type="button" class="btn btn-primary dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false" ngbDropdownToggle></button>
@@ -1247,10 +1247,10 @@
                                 <a class="dropdown-item" href="javascript:void(0);">Empresa</a>
                             </div>
                         </div>
-
+                    
                         <div class="btn-group" ngbDropdown>
                             <button type="button" class="btn btn-primary" style="
-                            width: 250px;
+                            width: 200px;
                             text-align: left;
                         ">{{ !criticidad ? 'Criticidad' : criticidad }}</button>    
                             <button type="button" class="btn btn-primary dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false" ngbDropdownToggle></button>
@@ -1589,7 +1589,7 @@
                 <div class="row mb-3 align-items-center justify-content-center">
                     <h4>Aplicabilidad</h4>
 
-                <div class="col-sm-4">
+                <div class="col-12 col-sm-12 col-md-12 col-xl-4 col-xxl-4">
                     <div class="card">
                         <div class="card-body">
 
@@ -1603,7 +1603,7 @@
                     </div>
                 </div>
 
-                <div class="col-sm-8">
+                <div class="col-12 col-sm-12 col-md-12 col-xl-8 col-xxl-8">
                     <div class="card">
                         <div class="card-body">
 
@@ -1620,7 +1620,7 @@
             </div>
             <div class="row mb-3 align-items-center justify-content-center">
             
-                <div class="col-sm-4">
+                <div class="col-12 col-sm-12 col-md-12 col-xl-4 col-xxl-4">
                     <div class="card">
                         <div class="card-body">
 
@@ -1635,7 +1635,7 @@
 
                 </div>
 
-                <div class="col-sm-8">
+                <div class="col-12 col-sm-12 col-md-12 col-xl-8 col-xxl-8">
                     <div class="card">
                         <div class="card-body">
 
@@ -1653,7 +1653,7 @@
             
             <div class="row mb-3 align-items-center justify-content-center">
             
-                <div class="col-sm-4">
+                <div class="col-12 col-sm-12 col-md-12 col-xl-4 col-xxl-4">
                     <div class="card">
                         <div class="card-body">
 
@@ -1667,7 +1667,7 @@
 
                 </div>
 
-                <div class="col-sm-8">
+                <div class="col-12 col-sm-12 col-md-12 col-xl-8 col-xxl-8">
                     <div class="card">
                         <div class="card-body">
 
@@ -1685,7 +1685,7 @@
             
             <div class="row mb-3 align-items-center justify-content-center">
             
-                <div class="col-sm-3">
+                <div class="col-12 col-sm-12 col-md-12 col-xl-3 col-xxl-3">
                     <div class="card">
                         <div class="card-body">
 
@@ -1699,7 +1699,7 @@
 
                 </div>
 
-                <div class="col-sm-3">
+                <div class="col-12 col-sm-12 col-md-12 col-xl-3 col-xxl-3">
                     <div class="card">
                         <div class="card-body">
 
@@ -1714,7 +1714,7 @@
                     </div>
                 </div>
       
-                <div class="col-sm-3">
+                <div class="col-12 col-sm-12 col-md-12 col-xl-3 col-xxl-3">
                     <div class="card">
                         <div class="card-body">
 
@@ -1728,7 +1728,7 @@
 
                 </div>
 
-                <div class="col-sm-3">
+                <div class="col-12 col-sm-12 col-md-12 col-xl-3 col-xxl-3">
                     <div class="card">
                         <div class="card-body">
 
@@ -1747,7 +1747,7 @@
             
             <div class="row mb-3 align-items-center justify-content-center">
             
-                <div class="col-sm-3">
+                <div class="col-12 col-sm-12 col-md-12 col-xl-3 col-xxl-3">
                     <div class="card">
                         <div class="card-body">
 
@@ -1761,7 +1761,7 @@
 
                 </div>
 
-                <div class="col-sm-3">
+                <div class="col-12 col-sm-12 col-md-12 col-xl-3 col-xxl-3">
                     <div class="card">
                         <div class="card-body">
 
@@ -1776,7 +1776,7 @@
                     </div>
                 </div>
       
-                <div class="col-sm-3">
+                <div class="col-12 col-sm-12 col-md-12 col-xl-3 col-xxl-3">
                     <div class="card">
                         <div class="card-body">
 
@@ -1790,7 +1790,7 @@
 
                 </div>
 
-                <div class="col-sm-3">
+                <div class="col-12 col-sm-12 col-md-12 col-xl-3 col-xxl-3">
                     <div class="card">
                         <div class="card-body">
 
@@ -1809,7 +1809,7 @@
                 <div class="row mb-3 align-items-center justify-content-center">
                     <h4>Ámbito normativo a gestionar</h4>
 
-                <div class="col-sm-4">
+                <div class="col-12 col-sm-12 col-md-12 col-xl-4 col-xxl-4">
                     <div class="card">
                         <div class="card-body">
 
@@ -1823,7 +1823,7 @@
                     </div>
                 </div>
 
-                <div class="col-sm-8">
+                <div class="col-12 col-sm-12 col-md-12 col-xl-8 col-xxl-8">
                     <div class="card">
                         <div class="card-body">
 
@@ -1842,7 +1842,7 @@
                 
             <div class="row mb-3 align-items-center justify-content-center">
 
-            <div class="col-sm-4">
+            <div class="col-12 col-sm-12 col-md-12 col-xl-4 col-xxl-4">
                 <div class="card">
                     <div class="card-body">
 
@@ -1856,7 +1856,7 @@
                 </div>
             </div>
 
-            <div class="col-sm-8">
+            <div class="col-12 col-sm-12 col-md-12 col-xl-8 col-xxl-8">
                 <div class="card">
                     <div class="card-body">
 
@@ -1874,7 +1874,7 @@
         
         <div class="row mb-3 align-items-center justify-content-center">
 
-            <div class="col-sm-4">
+            <div class="col-12 col-sm-12 col-md-12 col-xl-4 col-xxl-4">
                 <div class="card">
                     <div class="card-body">
 
@@ -1887,7 +1887,7 @@
                 </div>
             </div>
 
-            <div class="col-sm-8">
+            <div class="col-12 col-sm-12 col-md-12 col-xl-8 col-xxl-8">
                 <div class="card">
                     <div class="card-body">
 
