--- a/src/app/pages/auditor/create/body-legal/detail/body-legal-detail.component.html
+++ b/src/app/pages/auditor/create/body-legal/detail/body-legal-detail.component.html
@@ -148,11 +148,11 @@
             <ngx-simplebar class="mt-3 mx-n4 px-4 file-menu-sidebar-scroll" *ngIf="showMenu">
                 <!-- Menu --->
                 <ul class="list-unstyled file-manager-menu">
-                    <li>
+                    <!--<li>
                         <a href="javascript:void(0);" (click)="changeProducts($event, 'r-Encabezado', null)">
                             <i class="ri-file-list-2-line align-bottom me-2"></i> <span class="file-list-link">Encabezado</span>
                         </a>
-                    </li>
+                    </li>-->
                     <li *ngFor="let est of detail.EstructurasFuncionales; let i = index;">
                         <!-- Si posee items nivel 1--> 
                         <a data-bs-toggle="collapse" href="javascript:void(0);" (click)="changeProducts($event, 'r-'+est.idParte, i, 1)" role="button" aria-expanded="true"
@@ -256,7 +256,7 @@
         <ngx-simplebar class="mx-n3 pt-4 px-4 file-manager-content-scroll">
             <div>
 
-                <div class="col-xxl-12" id="r-Encabezado"><!--*ngIf="showEncabezado"-->
+                <!--<div class="col-xxl-12" id="r-Encabezado">//*ngIf="showEncabezado"
                     <div class="card">
                         <div class="row g-0">
                             <div class="col-md-12">
@@ -266,7 +266,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div>-->
 
         <ng-container *ngFor="let data of articulosDatas">
             
