--- a/src/app/pages/projects/create/type/body-legal/detail/body-legal-detail.component.html
+++ b/src/app/pages/projects/create/type/body-legal/detail/body-legal-detail.component.html
@@ -162,11 +162,11 @@
             <ngx-simplebar class="mt-3 mx-n4 px-4 file-menu-sidebar-scroll" *ngIf="showMenu">
                 <!-- Menu --->
                 <ul class="list-unstyled file-manager-menu">
-                    <li>
+                    <!--<li>
                         <a href="javascript:void(0);" (click)="changeProducts($event, 'r-Encabezado', null)">
                             <i class="ri-file-list-2-line align-bottom me-2"></i> <span class="file-list-link">Encabezado</span>
                         </a>
-                    </li>
+                    </li>-->
                     <li *ngFor="let est of detail.EstructurasFuncionales; let i = index;">
                         <ng-container [ngTemplateOutlet]="myMenu" 
                             [ngTemplateOutletContext] ="{est:est, i: i, nivel: 1}">
@@ -243,7 +243,7 @@
                 </div>
             </div>
         <ngx-simplebar class="mx-n3 pt-4 px-4 file-manager-content-scroll">
-                <div class="col-xxl-12" id="r-Encabezado" *ngIf="showEncabezado">
+                <!--<div class="col-xxl-12" id="r-Encabezado" *ngIf="showEncabezado">
                     <div class="card">
                         <div class="row g-0">
                             <div class="col-md-12">
@@ -253,7 +253,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div>-->
         
         <!--Template Articulos-->
         <ng-template #myArticles let-data="data">
