--- a/src/app/pages/projects/identification/identification.component.scss
+++ b/src/app/pages/projects/identification/identification.component.scss
@@ -65,3 +65,28 @@
 .pointer{
     cursor: pointer;
 }
+
+.chip {
+    display: inline-block;
+    padding: 0 10px;
+    //height: 50px;
+    font-size: 12px;
+    line-height: 24px;
+    border-radius: 25px;
+    color: white;
+    background-color: #405189;
+    width: 100%;
+  }
+
+  .closebtn {
+    padding-left: 10px;
+    color: white;
+    //font-weight: bold;
+    float: right;
+    font-size: 20px;
+    cursor: pointer;
+  }
+  
+  .closebtn:hover {
+    color: #000;
+  }
