nuevas graficas con filtro

--- a/src/app/pages/projects/identification/identification.component.scss
+++ b/src/app/pages/projects/identification/identification.component.scss
@@ -75,7 +75,8 @@
     border-radius: 25px;
     color: white;
     background-color: #405189;
-    width: 100%;
+    width: auto;//100%;
+    margin-left: 10px;
   }
 
   .closebtn {
